# examples_cpp

./: .gitignore  LICENSE.md  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
1_OOP/1_intro/: main.cpp
1_OOP/2_inheritance/step_0/: main.cpp
1_OOP/3_polymorphie/: CMakeLists.txt
2_SOLID/1_SRP/step_0/: geometry_application.cpp  rectangle.h
2_SOLID/1_SRP/step_1/: geometry_application.cpp
2_SOLID/1_SRP/step_2/: graphical_rectangle.cpp  graphical_rectangle.h
2_SOLID/2_OCP/step_0/: shapes.cpp
2_SOLID/2_OCP/step_1/: main.cpp  shapes.h
2_SOLID/3_LSP/step_1/: main.cpp
2_SOLID/3_LSP/step_2/: a.out  main.cpp
2_SOLID/5_ISP/composition_printing_service/step_0/: CMakeLists.txt
2_SOLID/5_ISP/composition_printing_service/step_0/core/: PayrollApp.cpp  ShopApp.cpp
3_patterns/1_observer/: README.md
3_patterns/1_observer/step_0/: CMakeLists.txt
3_patterns/1_observer/step_0/app/: main.cpp
3_patterns/1_observer/step_0/src/core/: data.cpp  data.h
3_patterns/1_observer/step_0/src/ui/: CMakeLists.txt  TableChart.h
3_patterns/1_observer/step_2_dip/: README.md
3_patterns/2_factory/: README.md
3_patterns/2_factory/step_0/: main.cpp
3_patterns/2_factory/step_2/: main.cpp  simple_shape_factory.h
3_patterns/2_factory/step_3/: simple_shape_factory.h
3_patterns/2_factory/step_4/: simple_shape_factory.h  square.h
3_patterns/2_factory/step_5/: simple_shape_factory.h  triangle.h
3_patterns/2_factory/step_6/: CMakeLists.txt  simple_shape_factory.h
3_patterns/2_factory/step_7/: CMakeLists.txt  advanced_shape_factory.h  circle.h  main.cpp  qt_shape_factory.h  square.h  triangle.h
3_patterns/2_factory/step_7/core/: application.h  shape_factory.h
3_patterns/3_command/final/: PlaystationCommand.h  main.cpp
3_patterns/3_command/step_0/: CMakeLists.txt  SoundBar.h  TV.h  main.cpp
3_patterns/3_command/step_1/: main.cpp
3_patterns/3_command/step_2/: AllOffCommand.h  PlaystationCommand.h  TVCommand.h  main.cpp
3_patterns/3_command/step_3/: AllOffCommand.h  PlaystationCommand.h  TVCommand.h  main.cpp
3_patterns/3_command/step_4_functions/: AllOffCommand.h  PlaystationCommand.h  TV.h  TVCommand.h  main.cpp
3_patterns/4_strategy/step_0/: CMakeLists.txt  Circle.h  Shape.h  main.cpp
3_patterns/4_strategy/step_1/: Circle.h  ConsoleCircle.h  QtCircle.h  main.cpp
3_patterns/4_strategy/step_10_functions/: Circle.h  CircleDrawerStrategy.h  CircleSaverStrategy.h  ConsoleCircleDrawer.h  JSONCircleSaver.h  QtCircleDrawer.h  XMLCircleSaver.h  main.cpp
3_patterns/4_strategy/step_2/: Circle.h  JsonConsoleCircle.h  JsonQtCircle.h  XMLConsoleCircle.h  XMLQtCircle.h  main.cpp
3_patterns/4_strategy/step_3/: Circle.h  ConsoleCircle.h  JSONCircleSaver.h  JSONConsoleCircle.h  JSONQtCircle.h  Shape.h  XMLCircleSaver.h  XMLConsoleCircle.h  XMLQtCircle.h  main.cpp
3_patterns/4_strategy/step_4/: JSONConsoleCircle.h  JSONQtCircle.h  XMLConsoleCircle.h  XMLQtCircle.h
3_patterns/4_strategy/step_5/: JSONCircleSaver.h  JSONConsoleCircle.h  JSONQtCircle.h  QtCircle.h  XMLCircleSaver.h  XMLConsoleCircle.h  XMLQtCircle.h  main.cpp
3_patterns/4_strategy/step_6/: CircleSaver.h  JSONConsoleCircle.h  JSONQtCircle.h  XMLConsoleCircle.h  XMLQtCircle.h
3_patterns/4_strategy/step_7/: CircleSaver.h  JSONConsoleCircle.h  JSONQtCircle.h  XMLCircleSaver.h  XMLConsoleCircle.h  XMLQtCircle.h  main.cpp
3_patterns/4_strategy/step_8/: CMakeLists.txt  Circle.h  ConsoleCircle.h  JSONCircleSaver.h  QtCircle.h  main.cpp
3_patterns/4_strategy/step_9/: Circle.h  CircleDrawerStrategy.h  CircleSaverStrategy.h  ConsoleCircleDrawer.h  JSONCircleSaver.h  QtCircleDrawer.h  XMLCircleSaver.h  main.cpp
3_patterns/Factory/Factory_Exercise/: circle.h  main.cpp
3_patterns/Factory/Factory_Solution 1 - Methods/: shapefactoryimp.h
3_patterns/Factory/Factory_Solution 2 - Strings/: main.cpp
3_patterns/Observer - WeatherStation/Observer_Exercise/: CMakeLists.txt  chartview.h  main.cpp
3_patterns/Observer - WeatherStation/Observer_Solution_1_DIP/: chartview.h  main.cpp
3_patterns/Observer - WeatherStation/Observer_Solution_2_DIP_DRY/: barview.h  chartview.h  main.cpp
3_patterns/Observer - WeatherStation/Observer_Solution_3_Observer/: barview.h  lineview.h  main.cpp
3_patterns/weatherstation_exercise/: main.cpp
4_TDD - HVAC/hvac_Exercise/: CMakeLists.txt
4_TDD - HVAC/hvac_Exercise/.devcontainer/: Dockerfile  devcontainer.json
4_TDD - HVAC/hvac_Exercise/src/: hvac.h
4_TDD - HVAC/hvac_Exercise/test/: environmentcontrollertest.cpp  hvacspy.h  main.cpp
4_TDD - HVAC/hvac_Solution/test/: hvacspy.h  (+1 more)
Factory/Factory_Exercise/: square.h
Factory/Factory_Solution 2 - Strings/: shapefactoryimp.h
Factory/Factory_Solution 3 - Event Loop/: shapefactoryimp.h  triangle.h
OOP/1_intro/: main  main.cpp
OOP/3_polymorphie/: main.cpp
Observer - WeatherStation/Observer_Solution_1_DIP/: CMakeLists.txt  barview.h  lineview.h
Observer - WeatherStation/Observer_Solution_2_DIP_DRY/: lineview.h
Observer - WeatherStation/Observer_Solution_3_Observer/: chartview.h
Patterns - Weather Station/weatherstation_exercise/: CMakeLists.txt  chart.cpp  chart.h  charts.cpp  charts.h  main.cpp  utilities.h
Patterns - Weather Station/weatherstation_exercise/core/: application.cpp  application.h  sensors.cpp  sensors.h  utilities.cpp  utilities.h
SOLID/1_SRP/step_0/: CMakeLists.txt  geometry_application.h  graphical_application.cpp  graphical_application.h  main.cpp  rectangle.h
SOLID/1_SRP/step_2/: CMakeLists.txt  geometry_application.cpp  geometry_application.h  graphical_application.cpp  graphical_application.h  graphical_rectangle.cpp  graphical_rectangle.h  main.cpp
SOLID/1_SRP/step_2/core/: geometry_application.cpp
pattern_observer/: CMakeLists.txt  README.md
pattern_observer/app/: main.cpp
pattern_observer/src/curses/: CMakeLists.txt  canvas.cpp  canvas.h  menu.h
pattern_observer/src/model/: CMakeLists.txt
pattern_observer/src/ui/: CMakeLists.txt
pattern_observer/step_1/src/console_ui/: CMakeLists.txt
pattern_observer/step_2_dip/src/model/: CMakeLists.txt  data.cpp  data.h
(+130 files in other folders)
